introduce multer for file uploading. upload temporary file into /dist/uploads for now. Express won't serve from any root folder so put in /dist/ so that the preview file can be viewed. make uploader graphic lighter when the user hovers. hide uploader graphic when user uploads photo. put preview img in wrapper and make a fixed width and then crop -- this is so page doesn't reflow when graphic is uploaded, but we'll have to make sure that the user does not think their photo will get cut off in this way. (or we'll then crop the image to these dimensions -- that wouldn't be the nicest UX but fine to go out with.

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -30,6 +30,16 @@ input[type="radio"] {
   font-size: 1.4rem;
 }
 
+input[type="file"].form-control-file {
+  display: none;
+}
+
+.preview-bike-photo-wrapper {
+  height: 238px;
+  width: 360px;
+  overflow: hidden;
+}
+
 .form-control-number {
   width: 70px;
 }
@@ -42,15 +52,15 @@ legend {
   font-size: 1.6rem;
 }
 
-input[type="file"].form-control-file {
-  display: none;
-}
-
 .custom-file-upload {
   cursor: pointer;
 }
 
 .add-bike-photo {
+  opacity: 0.30;
+}
+
+.add-bike-photo:hover {
   opacity: 0.25;
 }
 
@@ -68,7 +78,6 @@ dl.bike-details dt {
 
 .card-photo-wrapper {
   width: 100%;
-  background-color: gray;
   overflow: hidden;
   height: 250px;
 }
